# secret-store

./: .gitignore  README.md  pyproject.toml  setup.cfg
secretstore/: core.py  identity.py
secretstore/dao/: identity.py
src/secretstore/: __init__.py  agent.py  core.py  crypto.py  exceptions.py  ssm.py  utils.py
src/secretstore/dao/: __init__.py  identity.py
src/secretstore/guardian/: __init__.py  dao.py  entity.py  manager.py
src/secretstore/identity/: __init__.py  dao.py  entity.py  manager.py
src/secretstore/store/: __init__.py  dao.py  entity.py  manager.py
src/secretstore/store_key/: dao.py  entity.py  manager.py
