[project]
name = "secret-store"
version = "1.1.0"
description = "Secrets manager for data to share with multiple people on the same machine. Based on SSH Keys"
authors = [
    { name = "William", email = "git@mxcz.fr" }
]
dependencies = [
    "paramiko>=3.5.0,<4",
    "pycryptodome==3.21.0",
    "pyhpke>=0.6.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
secret-store = "secretstore.bin.cli:main"
